--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/Mingtindu/nnine-tech-next.git",
+  "author": "ngimatendi <ngimatendi12@gmail.com>",
+  "license": "MIT"
 }
