--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches:
       - "main"
-      - "coding-for-home-page"
+      - "nnine-tech-frontend"
   push:
     branches:
       - '**'
