--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/mdx": "^14.2.3",
     "@types/mdx": "^2.0.13",
     "contentlayer": "^0.3.4",
+    "formik": "^2.4.6",
     "next": "14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
