--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "react-markdown": "^9.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-typed": "^2.0.12",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.1",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
-    "shiki": "^1.5.1"
+    "shiki": "^1.5.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "postcss": "^8",
