--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/mdx": "^2.0.13",
     "contentlayer": "^0.3.4",
     "formik": "^2.4.6",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,7 +37,8 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "shiki": "^1.5.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
