--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/mdx": "^2.0.13",
     "contentlayer": "^0.3.4",
     "formik": "^2.4.6",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
