--- a/backend/config.env
+++ b/backend/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-DATABASE_LOCAL=mongodb://localhost:27017/N9-training
+DATABASE_LOCAL=mongodb://localhost:27017/suman
 PORT=8000
