feat:trainer api

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
-DATABASE_LOCAL=mongodb://localhost:27017/N9-training
+DATABASE_LOCAL= mongodb://localhost:27017/nnine
+
 PORT=8000
