--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "start:dev": "supervisor server.js",
     "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&& supervisor server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +15,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "superjest": "^0.3.0",
+    "supertest": "^7.0.0",
     "supervisor": "^0.12.0"
   }
 }
