--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "react-typed": "^2.0.12",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.1",
