--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "supervisor server.js",
+    "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&& supervisor server.js",
     "debug": "ndb server.js"
   },
@@ -16,7 +17,7 @@
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1",
+    "nodemon": "^3.1.7",
     "supervisor": "^0.12.0"
   }
 }
