feat: Authentication and authorization

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,4 +1,13 @@
 NODE_ENV=development
 
-DATABASE_LOCAL=mongodb://localhost:27017/suman
+PORT=8000
+DATABASE_LOCAL=mongodb://localhost:27017/test
+
+JWT_SECRET=admin-secure-secret-key-for-token
+JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=5721d0a758e9d5
+EMAIL_PASSWORD=509078bcc77d0a
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
 
