--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
-<<<<<<< HEAD
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "supervisor": "^0.12.0",
     "validator": "^13.12.0"
-=======
-    "multer": "^1.4.5-lts.1",
-    "supervisor": "^0.12.0"
->>>>>>> 353225028f4421e1ed0bc7e9165a23747b588f24
   }
 }
