--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,9 @@
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-<<<<<<< HEAD
     "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
     "supervisor": "^0.12.0",
     "validator": "^13.12.0"
-=======
-    "nodemon": "^3.1.7",
-    "supervisor": "^0.12.0"
->>>>>>> 85f8ff27e99dbfd9b980526775f3dde49b98291c
   }
 }
