--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
-<<<<<<< HEAD
-    "supervisor": "^0.12.0",
-    "validator": "^13.12.0",
-    "multer": "^1.4.5-lts.1"
-=======
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
-    "supervisor": "^0.12.0"
->>>>>>> 85f8ff27e99dbfd9b980526775f3dde49b98291c
+    "socket.io": "^4.8.1",
+    "supervisor": "^0.12.0",
+    "validator": "^13.12.0"
   }
 }
