--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1",
     "supervisor": "^0.12.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
+    "nodemon": "^3.1.7"
   }
 }
