--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "server": "^1.0.41",
     "socket.io": "^4.8.1",
     "supervisor": "^0.12.0",
     "validator": "^13.12.0"
