feat: upload photo updated

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
-DATABASE_LOCAL=mongodb+srv://lazyfox916:lazyfox916@nnine.lry6f.mongodb.net/?retryWrites=true&w=majority&appName=nnine
-
+DATABASE=mongodb+srv://lazyfox916:<PASSWORD>@nnine.lry6f.mongodb.net/?retryWrites=true&w=majority&appName=nnine
+DATABASE_PASSWORD=lazyfox916
 
 PORT=8000
 DATABASE_LOCAL=mongodb://localhost:27017/test
@@ -9,7 +9,7 @@ JWT_SECRET=admin-secure-secret-key-for-token
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=5721d0a758e9d5
+iEMAIL_USERNAME=5721d0a758e9d5
 EMAIL_PASSWORD=509078bcc77d0a
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=587
