feat: cloudinary updated

--- a/backend/config.env
+++ b/backend/config.env
@@ -14,3 +14,6 @@ EMAIL_PASSWORD=509078bcc77d0a
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=587
 
+CLOUDINARY_NAME = dn9danoqy
+CLOUDINARY_API_KEY = 872184362599648
+CLOUDINARY_API_SECRET = 8ytlcVKfD__-IPGOR3l_6xXkrdM
