--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
@@ -28,6 +29,7 @@
     "server": "^1.0.41",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "supervisor": "^0.12.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
