feat: admin dashboard

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE_LOCAL=mongodb+srv://lazyfox916:lazyfox916@nnine.lry6f.mongodb.net/?retryWrites=true&w=majority&appName=nnine
+DATABASE_LOCAL=mongodb+srv://lazyfox916:lazyfox916@nnine.lry6f.mongodb.net/
 
 
 PORT=8000
