--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "ndb": "^1.1.5",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "server": "^1.0.41",
