feat : Khalti Payment Integration

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 DATABASE_LOCAL=mongodb+srv://lazyfox916:lazyfox916@nnine.lry6f.mongodb.net/
-
+DATABASE_PASSWORD = lazyfox916
 
 PORT=8000
 
