--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.21.0",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
@@ -34,6 +33,7 @@
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "supervisor": "^0.12.0",
+    "twilio": "^5.3.6",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   }
