feat:esewaGateway-api

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE_LOCAL=mongodb+srv://lazyfox916:lazyfox916@nnine.lry6f.mongodb.net/?retryWrites=true&w=majority&appName=nnine
+DATABASE_LOCAL= mongodb+srv://lazyfox916:lazyfox916@nnine.lry6f.mongodb.net/?retryWrites=true&w=majority&appName=nnine
 
 
 PORT=8000
@@ -16,3 +16,11 @@ EMAIL_PORT=587
 CLOUDINARY_NAME = dn9danoqy
 CLOUDINARY_API_KEY = 872184362599648
 CLOUDINARY_API_SECRET = 8ytlcVKfD__-IPGOR3l_6xXkrdM
+
+
+
+ESEWA_SECRET_KEY= "8gBm/:&EnhH.1/q"
+ESEWA_GATEWAY_URL = "https://rc-epay.esewa.com.np"
+ESEWA_PRODUCT_CODE = "EPAYTEST"
+
+
