--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.21.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -33,6 +35,7 @@
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "pug": "^3.0.3",
     "server": "^1.0.41",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
