--- a/attendance-be/package.json
+++ b/attendance-be/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
