--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "remark-gfm": "^4.0.0",
     "shiki": "^1.5.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
